add heading display (untested)

--- a/LocationDemo/Base.lproj/Main.storyboard
+++ b/LocationDemo/Base.lproj/Main.storyboard
@@ -46,8 +46,22 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Heading" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jq7-Wg-xDa">
+                                <rect key="frame" x="16" y="162" width="64" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Heading" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UmE-9u-gpE">
+                                <rect key="frame" x="111" y="162" width="64" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Address" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="JHW-Mz-fp5">
-                                <rect key="frame" x="16" y="195" width="343" height="128"/>
+                                <rect key="frame" x="16" y="242" width="343" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -68,13 +82,18 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z8c-4I-eSa">
-                                <rect key="frame" x="145" y="162" width="85" height="30"/>
+                                <rect key="frame" x="145" y="204" width="85" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Get Address"/>
                                 <connections>
                                     <action selector="getAddressTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="B7s-E2-PV4"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0Fq-Ry-pwx">
+                                <rect key="frame" x="181" y="482" width="13" height="61"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -82,6 +101,8 @@
                     <connections>
                         <outlet property="addressTextView" destination="JHW-Mz-fp5" id="tVR-l9-cYh"/>
                         <outlet property="chesterDistanceLabel" destination="Lxv-i8-0l7" id="rV2-ai-Cfe"/>
+                        <outlet property="directionView" destination="0Fq-Ry-pwx" id="7ca-i8-zg6"/>
+                        <outlet property="headingLabel" destination="UmE-9u-gpE" id="GA9-U0-pek"/>
                         <outlet property="latLabel" destination="bOa-O5-e0M" id="aFJ-Ln-ouR"/>
                         <outlet property="longLabel" destination="4ka-h7-6mH" id="xeU-yc-LMS"/>
                     </connections>
